<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="hka.erhebungsapp.ui.start.StartFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/nav_export"
        android:name="hka.erhebungsapp.ui.export.ExportFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_export" />

    <fragment
        android:id="@+id/nav_about"
        android:name="hka.erhebungsapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>